<resources>
    <string name="app_name">PetInLove</string>
    <string name="loading">Loading</string>
    <string name="welcome_message">AuAuCome to Aur Community</string>
    <string name="explore_the_application">Explore AU the good things</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account_signup">Dont have an account? SignUp Here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here!</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_empty_msg">Email cannot be empty!</string>
    <string name="name_empty_msg">Name cannot be empty!</string>
    <string name="phone_empty_msg">Phone cannot be empty!</string>
    <string name="password_empty_msg">Password cannot be empty!</string>
    <string name="description_empty_msg">Description cannot be empty!</string>
    <string name="address_name_empty_msg">Address name cannot be empty!</string>
    <string name="city_address_empty_msg">Address city cannot be empty!</string>
    <string name="address_description_empty_msg">Address description cannot be empty!</string>
    <string name="address_number_empty_msg">Address number cannot be empty!</string>
    <string name="address_zip_code_empty_msg">Address zip code cannot be empty!</string>
    <string name="something_wrong_msg">Something went wrong!</string>
    <string name="no_internet_connection_msg">No Internet Connection</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="analytics">Analytics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_image">Change Image</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="_21">21</string>
    <string name="publications">Publications</string>
    <string name="_69">69</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="lorem_ipsum_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. I</string>
    <string name="post">Post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="set_image_clicking_here">Set Image Clicking Here</string>
    <string name="select_image_msg">Select Image</string>
    <string name="successfully_add_post_msg">Post Successfully Added</string>
    <string name="image_not_found_msg">You Must Select An Image First</string>
    <string name="_125">125</string>
    <string name="add_a_cute_comment_here">Add a cute comment here</string>
    <string name="comment_error_message">Your commentary was not posted. Try again!</string>
    <string name="comments_string_title">Comments</string>
    <string name="saved_posts">My Saved Posts</string>
</resources>