<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/postFragment"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchPersonFragment"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/savedPostsFragment"
        android:icon="@drawable/ic_baseline_turned_in_not_24"
        android:title="@string/saved_posts"
        app:showAsAction="ifRoom" />
</menu>