<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">


        <TextView
            android:id="@+id/textViewMainFragmentTitle"
            style="@style/CustomText.Bold.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:text="@string/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMainFragmentSubTitle"
            style="@style/CustomText.Bold.SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_the_application"
            app:layout_constraintEnd_toEndOf="@+id/textViewMainFragmentTitle"
            app:layout_constraintStart_toStartOf="@+id/textViewMainFragmentTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewMainFragmentTitle" />

        <ImageView
            android:id="@+id/imageViewMainFragment"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pethome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMainFragmentSubTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMainFragmentLogin"
            android:background="@drawable/bg_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:elevation="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMainFragment" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMainFragmentSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="@dimen/_12sdp"
            android:background="@drawable/bg_login_button"
            android:backgroundTint="@color/white"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMainFragmentLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>